@@ -38,22 +38,14 @@ src/parse.cc
 src/parse.h*
 src/marc
 test-driver
-tests/MaRC_Prog_Test.sh.*
+tests/*.log
+tests/*.trs
 tests/Math_Test
-tests/Math_Test.log
-tests/Math_Test.trs
 tests/Vector_Test
-tests/Vector_Test.log
-tests/Vector_Test.trs
 tests/Matrix_Test
-tests/Matrix_Test.log
-tests/Matrix_Test.trs
 tests/Geometry_Test
-tests/Geometry_Test.log
-tests/Geometry_Test.trs
 tests/OblateSpheroid_Test
-tests/OblateSpheroid_Test.log
-tests/OblateSpheroid_Test.trs
+tests/Scale_Offset_Test
 tests/test-suite.log
 tests/test_map.fits
 ylwrap
